--- a/requirements-pipeline.txt
+++ b/requirements-pipeline.txt
@@ -1,7 +1,7 @@
-pandas
-scikit-learn
-hydra-core
-omegaconf
-torch
-pytorch-lightning
-onnx
+pandas==2.0.3
+scikit-learn==1.3.2
+hydra-core==1.3.2
+omegaconf==2.3.0
+torch==2.1.2
+pytorch-lightning==2.1.4
+onnx==1.16.2
